fixed covers for mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -309,6 +309,12 @@ box-shadow: 0px -2px 0px rgb(212, 139, 99);
         display: none;
     }
 } 
+@media (pointer: coarse) { 
+
+    .hero-card, .hero .hero-card-cover{
+        display: none;
+    }
+} 
 .hero-card, .hero .hero-card-cover{
    margin: 0 auto 0 auto;
    width: 260px;
@@ -339,7 +345,12 @@ box-shadow: 0px -2px 0px rgb(212, 139, 99);
         display: none;
     }
 } 
+@media (pointer: coarse) { 
 
+    .hover-card .hover-card-cover{
+        display: none;
+    }
+} 
 
 
 
